# thc

./: .gitignore  cabal.project  default.nix
cyk/: cyk.cabal
cyk/Text/CYK/: FingerTree.hs  Parser.hs
cyk/tests/: CykExpr.hs  in-easy.txt  in-easy2.txt  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt
pinky/: pinky.cabal
pinky/Data/FingerTree/: Pinky.hs
pinky/Data/FingerTree/Pinky/: Sequence.hs
pinky/benchmarks/: fingertree.hs  pinky.hs
thc-lexer/: stack.yaml  thc-lexer.cabal
thc-lexer/Language/Haskell/THC/Syntax/: Lexer.hs  SourceFile.hs
thc-lexer/apps/: LexHighlight.hs
thc-lexer/tests/: test1.hs
thc-parser/: thc-parser.cabal
thc-parser/Language/Haskell/THC/Syntax/: AST.hs  Parser.hs
thc-parser/Text/Parser/THC/: Types.hs
thc-parser/apps/: PrintParseTbl.hs  TestHsParse.hs
thc-parser/examples/: module1.hs  module10.hs  module11.hs  module12.hs  module2.hs  module3.hs  module4.hs  module5.hs  module6.hs  module7.hs  module8.hs  module9.hs
